--- a/app/src/main/res/layout/activity_starship_detail.xml
+++ b/app/src/main/res/layout/activity_starship_detail.xml
@@ -7,7 +7,7 @@
     android:layout_height="match_parent"
     android:background="#2F3031"
     android:orientation="vertical"
-    tools:context=".StarshipDetail">
+    tools:context=".StarshipDetailActivity">
 
 
     <TextView
@@ -20,7 +20,7 @@
         android:layout_marginBottom="7dp"
         android:fontFamily="sans-serif-black"
         android:textAlignment="viewStart"
-        android:textColor="@color/titulo"
+        android:textColor="@color/titulo_detalle"
         android:textSize="36sp"
         app:layout_constraintBottom_toTopOf="@+id/textViewModelDetail"
         app:layout_constraintEnd_toEndOf="parent"
